--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
-    
+    <style>
+      body {
+        background: brown; 
+      }
+    </style>
   </head>
   <body>
     Minecraft!
