--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!doctype html>
 <html>
   <head>
     <title></title>
-    <style>
+    <style type="">
       body {
         background: brown; 
       }
