--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Dave Bednarski</title>
-    <style type="">
+    <style>
       body {
         background: brown; 
       }
