--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>Dave Bednarski</title>
-    <style>
-      body {
-        background: brown; 
-      }
-    </style>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    Minecraft
+    hello.
   </body>
 </html>
